async, pom fix, some weird java issue for list